<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namelabel" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/namelabel" />

    <TextView
        android:id="@+id/manulabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namelabel"
        android:text="@string/manulabel" />

    <TextView
        android:id="@+id/manu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/manulabel" />

    <TextView
        android:id="@+id/namelatlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manulabel"
        android:text="@string/namelatlabel" />

    <TextView
        android:id="@+id/namelat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/namelatlabel" />

    <TextView
        android:id="@+id/instlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/namelatlabel"
        android:text="@string/instlabel" />

    <TextView
        android:id="@+id/inst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/namelat"
        android:layout_toRightOf="@+id/instlabel" />

    <TextView
        android:id="@+id/descrlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/instlabel"
        android:text="@string/descrlabel" />

    <TextView
        android:id="@+id/descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/inst"
        android:layout_toRightOf="@+id/descrlabel" />


</RelativeLayout>